Lombok-like AST injection: entry-point methods on original class
- JavacAstInjector: injects entry-points (Foo.constructor(), foo.bar()) directly
  into the original class AST using javac TreeMaker reflection (Lombok approach)
- BytecodeInjector: expose resolveEntryPointName/resolveCallerClassBinaryName/
  isInstanceEntryPoint as public statics; inner class delegates to them
- RawitAnnotationProcessor: wire JavacAstInjector into init()/process()
- Tests: 3 new integration tests asserting entry-point on original class
- Reverted generated-class static entry-point (InvokerClassSpec/InvokerClassSpecTest)
- Updated spec docs and README for Lombok-like approach

Agent-Logs-Url: https://github.com/projectrawit/rawit/sessions/50e69c7d-d8d9-43de-af15-cbe82e202b97

Co-authored-by: ronnygunawan <3048897+ronnygunawan@users.noreply.github.com>