@@ -3,8 +3,9 @@
 ## Overview
 
 This document describes the design of the IDE integration feature for Rawit, which enables
-instant IDE reflection for generated staged APIs in VS Code Java (JDT LS / ECJ path) without
-requiring a manual workspace clean.
+instant IDE reflection for generated staged APIs in javac-based IDE tools (e.g. IntelliJ IDEA)
+by injecting entry-point methods directly into the original annotated class's AST — the same
+Lombok-like approach Lombok uses for `@Builder`, `@Getter`, etc.
 
 ## Problem Statement
 
@@ -22,67 +23,70 @@ Rawit's annotation processor operates on two distinct compiler paths:
 
 The fundamental issue is that the entry-point methods (e.g. `Foo.constructor()`, `foo.bar()`)
 are added to the original class's **bytecode only** — they are never present in source form.
-JDT LS, which builds an in-memory type model from source files and annotation processor output,
-does not see these methods because:
-- Bytecode injection may not execute reliably in ECJ's incremental compilation model.
-- Even when injection succeeds, the JDT type model is rebuilt from source, not bytecode.
+Javac-based IDE tools (e.g. IntelliJ IDEA with javac backend) may not see these methods until
+the class is recompiled.
 
 ## Design Approach
 
-### Dual-path architecture
+### Lombok-like AST injection (javac path)
 
-The design preserves the existing javac path unchanged and adds a **source-level entry-point** to
-the generated Invoker/Constructor classes. This entry-point is visible to any tool that processes
-the generated source files — including JDT LS.
+Rather than adding the entry-point to a separate generated class, the processor uses javac's
+internal `TreeMaker` API (accessed via reflection, exactly as Lombok does) to inject the
+entry-point method directly into the original annotated class's AST. This means:
+
+- `Foo.constructor()` appears on `Foo` — not on `FooConstructor`
+- `foo.bar()` appears on `Foo` — not on `FooBarInvoker`
+- The injected method is visible to the javac type-checker immediately
 
 ```
 Annotation Processor
-├── JavaPoetGenerator          → generates FooBarInvoker.java (source)
-│   └── InvokerClassSpec       → now also adds static IDE entry-point method
-└── BytecodeInjector           → injects foo.bar() into Foo.class (bytecode)
+├── JavaPoetGenerator          → generates FooBarInvoker.java (source, unchanged)
+├── BytecodeInjector           → injects foo.bar() into Foo.class bytecode (unchanged)
+└── JavacAstInjector           → injects foo.bar() into Foo's javac AST (NEW — Lombok-like)
 ```
 
-### Static IDE entry-point method
+### JavacAstInjector
 
-`InvokerClassSpec.build()` now adds a `public static` factory method to each generated
-Invoker/Constructor class. The method:
+A new class `JavacAstInjector` (in `rawit.processors.inject`) uses reflection to:
 
-1. Has the same name as the bytecode-injected entry-point (per `BytecodeInjector.resolveOverloadName`).
-2. For instance methods: accepts the enclosing class instance as a parameter.
-3. For all other cases: takes no parameters.
-4. Body: delegates directly to the generated class constructor.
+1. Obtain the javac `Context` via `JavacTask.instance(env).getContext()`.
+2. Get `TreeMaker` and `Names` instances via their `instance(Context)` static factories.
+3. For each annotated class, call `Trees.getTree(classElement)` to get the `JCClassDecl`.
+4. Build a `JCMethodDecl` using `TreeMaker.MethodDef(...)`.
+5. Append it to `JCClassDecl.defs`.
 
-Example generated source (before this change, abbreviated):
+The injected method:
+- Has `public static` modifiers for `@Constructor` and `@Invoker` on static/constructor elements.
+- Has `public` (instance) modifiers for `@Invoker` on instance methods.
+- Returns the generated caller class (e.g. `FooBarInvoker`).
+- Body: `return new FooBarInvoker()` or `return new FooBarInvoker(instance)`.
+
+### Example
+
+Before AST injection (`Foo.java`):
 ```java
-// FooBarInvoker.java — before
-@Generated("rawit.processors.RawitAnnotationProcessor")
-public final class FooBarInvoker {
-    private final Foo __instance;
-    public FooBarInvoker(Foo instance) { this.__instance = instance; }
-    public YStageInvoker x(int x) { ... }
-    // ...
+public class Foo {
+    @Invoker
+    public int bar(int x, int y) { return x + y; }
 }
 ```
 
-After this change:
+After AST injection (as seen by the type-checker):
 ```java
-// FooBarInvoker.java — after
-@Generated("rawit.processors.RawitAnnotationProcessor")
-public final class FooBarInvoker {
-    private final Foo __instance;
-    public FooBarInvoker(Foo instance) { this.__instance = instance; }
+public class Foo {
+    @Invoker
+    public int bar(int x, int y) { return x + y; }
 
-    // IDE entry-point: mirrors Foo.bar() — discoverable from source by JDT LS
-    public static FooBarInvoker bar(Foo instance) { return new FooBarInvoker(instance); }
-
-    public YStageInvoker x(int x) { ... }
-    // ...
+    // AST-injected by JavacAstInjector — Lombok-like, visible to type-checker
+    public com.example.generated.FooBarInvoker bar() {
+        return new com.example.generated.FooBarInvoker(this);
+    }
 }
 ```
 
 ### Entry-point name resolution
 
-The entry-point method name follows the same rules as `BytecodeInjector.resolveOverloadName`:
+The entry-point method name follows the same rules as `BytecodeInjector.resolveEntryPointName`:
 
 | Case                         | Entry-point name                               |
 |------------------------------|------------------------------------------------|
@@ -92,60 +96,80 @@ The entry-point method name follows the same rules as `BytecodeInjector.resolveO
 
 ### IDE user experience
 
-With this change, VS Code Java (JDT LS) users have two equivalent entry points:
+With this change, the entry-point is always on the original class — identical to the bytecode
+path:
 
-| Path        | Entry point                               | Requires                          |
-|-------------|-------------------------------------------|-----------------------------------|
-| javac (CLI) | `Foo.constructor()` / `foo.bar()`         | Bytecode injection (automatic)    |
-| IDE (JDT)   | `FooConstructor.constructor()` / `FooBarInvoker.bar(foo)` | Source-visible (immediate) |
+| Path              | Entry point              | Requires                          |
+|-------------------|--------------------------|-----------------------------------|
+| javac (CLI)       | `Foo.constructor()`      | Bytecode injection (automatic)    |
+| javac (IDE/type-checker) | `Foo.constructor()` | AST injection (automatic)    |
+| ECJ / VS Code Java | `Foo.constructor()`    | Future JDT plugin (see below)     |
 
-The IDE path is available immediately after annotation processing writes the generated source files,
-without any workspace clean or extra compilation step.
+### Idempotency
 
-### Shared semantic core
+`JavacAstInjector.inject()` checks whether a method with the target name already exists in the
+class (`methodExists()`) before injecting. If the method is already present (from a previous
+processing round or from bytecode injection), the call is silently skipped.
 
-The existing model layer (`AnnotatedMethod`, `Parameter`, `MergeNode`, `MergeTree`,
-`OverloadGroup`) already constitutes a **compiler-agnostic semantic core**. Both the javac path
-(bytecode injection) and the source-generation path (JavaPoet) consume this model. The
-`InvokerClassSpec` change extends the source-generation path to also emit the IDE entry-point,
-keeping the semantic model centralized.
+### Fallback
+
+`JavacAstInjector.tryCreate()` returns `null` when not running under javac (e.g. ECJ) or when
+the javac internal API is inaccessible. All injection calls on a null injector are skipped.
+The existing bytecode-injection path (`BytecodeInjector`) is unchanged and unaffected.
 
 ## Implementation
 
 ### Changed files
 
-- `src/main/java/rawit/processors/codegen/InvokerClassSpec.java`
-  - `build()`: calls `buildStaticEntryPointMethod()` after constructing the class builder
-  - `buildStaticEntryPointMethod(AnnotatedMethod)`: new private method that generates the static
-    factory `MethodSpec`
-  - `resolveEntryPointName(AnnotatedMethod)`: new private helper for entry-point name resolution
+- `src/main/java/rawit/processors/inject/JavacAstInjector.java` *(new)*
+  - `tryCreate(ProcessingEnvironment)`: factory; returns null on non-javac or failure
+  - `inject(EntryPoint)`: injects a single entry-point method into the class AST
+  - `buildFQNExpr()`, `methodExists()`: private helpers
+
+- `src/main/java/rawit/processors/inject/BytecodeInjector.java`
+  - Added `public static resolveEntryPointName(MergeTree)` — shared name resolution
+  - Added `public static resolveCallerClassBinaryName(MergeTree)` — shared caller class resolution
+  - Added `public static isInstanceEntryPoint(MergeTree)` — whether entry-point needs `instance` param
+  - Added `private static resolvePackagePrefix(String)` and `toPascalCase(String)` at outer class level
+  - `InjectionClassVisitor.resolveOverloadName` and `resolveCallerClassBinaryName` now delegate to the
+    public outer-class statics (DRY)
+
+- `src/main/java/rawit/processors/RawitAnnotationProcessor.java`
+  - Added `JavacAstInjector astInjector` field
+  - `init()`: calls `JavacAstInjector.tryCreate()` alongside `TaskListener` registration
+  - `process()`: new Stage 4b — loops over `allTrees` and calls `astInjector.inject()` for each
 
 ### Test coverage
 
-- `InvokerClassSpecTest` (unit tests): five new `@Test` methods verifying static entry-point
-  presence for each case (instance, static, `@Constructor`, `@Invoker` on constructor)
 - `RawitAnnotationProcessorIntegrationTest` (integration tests): three new `@Test` methods
-  exercising the full IDE entry-point chain end-to-end
+  verifying that the entry-point method is present **on the original class** (not on the
+  generated class) and that the full chain works end-to-end via the single-pass compile path:
+  - `astInjection_constructorAnnotation_entryPointOnOriginalClass`
+  - `astInjection_instanceInvoker_entryPointOnOriginalClass`
+  - `astInjection_staticInvoker_entryPointOnOriginalClass`
 
 ## Limitations and future work
 
-- The IDE entry-point (`FooBarInvoker.bar(foo)`) requires the user to reference the generated
-  class by name. The bytecode-injected path (`foo.bar()`) on the original class is more ergonomic
-  and is still the recommended API for CLI builds.
-- A future JDT/ECJ plugin could inject the `foo.bar()` method directly into the IDE's type model,
-  making the ergonomic API available in the IDE as well. This is tracked as a future enhancement.
+- **ECJ / VS Code Java**: `JavacAstInjector` is a no-op when running under ECJ because ECJ does
+  not expose the javac internal APIs. A future JDT/ECJ plugin could inject virtual members into
+  JDT's AST model, making the same ergonomic `Foo.constructor()` syntax available in VS Code Java.
+- **Module access**: The implementation relies on javac opening its internal packages to annotation
+  processors running in the unnamed module — a long-standing practice (Lombok does the same).
+  This may require `--add-opens` on some JDK distributions.
 - The current implementation does not add a Java agent or JDT plugin; it relies solely on the
-  standard `javax.annotation.processing.Filer` mechanism.
+  `TreeMaker` API available within the javac process.
 
 ## Traceability
 
-| Requirement | Implementation                         | Test                                          |
-|-------------|----------------------------------------|-----------------------------------------------|
-| 1.1         | `InvokerClassSpec.buildStaticEntryPointMethod()` | `InvokerClassSpecTest` (5 new tests) |
-| 1.2         | Method added in `InvokerClassSpec.build()` — always generated | `InvokerClassSpecTest` |
-| 1.3         | `resolveEntryPointName()` mirrors `BytecodeInjector.resolveOverloadName` | `InvokerClassSpecTest` |
-| 2.1, 2.2    | Static method in generated source, no bytecode injection required | Integration tests |
-| 3.1         | Integration tests assert chain equivalence | `RawitAnnotationProcessorIntegrationTest` |
-| 3.2         | Bytecode injection unchanged; static method is additive | All existing integration tests |
-| 4.1–4.3     | `resolveEntryPointName()` | `InvokerClassSpecTest.invokerOnConstructor_*`, `constructorAnnotation_*` |
-| 5.1         | Method body is a single constructor call | Code review of `buildStaticEntryPointMethod` |
+| Requirement | Implementation                                     | Test                                                  |
+|-------------|----------------------------------------------------|-------------------------------------------------------|
+| 1.1         | `JavacAstInjector.inject()`                        | `RawitAnnotationProcessorIntegrationTest` (3 new tests) |
+| 1.2         | `JavacAstInjector.methodExists()` idempotency check | Multiple rounds of integration test compile          |
+| 1.3         | `inject()` fails silently; null check in processor | Tests run under ECJ would not fail                   |
+| 2.1         | AST-injected method visible to javac type-checker  | `compileSinglePassAndLoad` + reflection `getMethod()` |
+| 2.2         | `BytecodeInjector.resolveEntryPointName` shared    | All existing and new integration tests               |
+| 3.1         | Integration tests assert chain result equivalence  | `astInjection_*` tests                               |
+| 3.2         | `BytecodeInjector` unchanged; AST injection additive | All existing integration tests still pass           |
+| 4.1–4.3     | `BytecodeInjector.resolveEntryPointName()`         | `astInjection_constructorAnnotation_*`, `astInjection_instanceInvoker_*` |
+| 5.1         | Injected method body is a single constructor call  | Code review of `JavacAstInjector.inject()`           |
+
